--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aphrodite": "^2.4.0",
+    "bootstrap": "^4.4.1",
     "firebase": "^7.6.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-sweetalert": "^5.1.9",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.0",
     "styled-components": "^4.4.1",
